--- a/mysql.yml
+++ b/mysql.yml
@@ -5,6 +5,8 @@ services:
     image: mysql:5.7.31
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports: 
+      - '3306:3306'
     environment:
       MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: root
